--- a/Core/ChitChatAPI.Aplication/ChitChatAPI.Aplication.csproj
+++ b/Core/ChitChatAPI.Aplication/ChitChatAPI.Aplication.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="deneme\" />
+    <Folder Include="Features\Query\" />
   </ItemGroup>
 
 </Project>
