--- a/Core/ChitChatAPI.Aplication/ChitChatAPI.Aplication.csproj
+++ b/Core/ChitChatAPI.Aplication/ChitChatAPI.Aplication.csproj
@@ -8,16 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ChitChatAPI.Domain\ChitChatAPI.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="deneme\" />
-    <Folder Include="Features\Query\" />
   </ItemGroup>
 
 </Project>
