--- a/Presentation/ChitChatAPI.API/ChitChatAPI.API.csproj
+++ b/Presentation/ChitChatAPI.API/ChitChatAPI.API.csproj
@@ -26,6 +26,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.2.37" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
